# nixnote2

./: .gitignore  .travis.yml  CMakeLists.txt  DOCKER-README.md  Makefile  Makefile.Debug  Makefile.Release  NixNote2.pro  NixNote2.qrc  NixNote21.pro  README.md  TODO.md  changelog.txt  fedora_install.sh  global.cpp  global.h  main.cpp  nixnote.cpp  nixnote.h  nixnote2.desktop  nixnote2.pro  nixnote2.qrc  nixnote21.desktop  shortcuts.txt  shortcuts_howto.txt  theme.ini  themes.ini  version.txt
.github/: issue_template.md
.github/workflows/: cicd.yaml
cmdtools/: addnote.cpp  addnote.h  alternote.cpp  cmdlinequery.cpp  cmdlinetool.cpp  cmdlinetool.h  emailnote.cpp  extractnotes.cpp  extractnotetext.cpp
communication/: communicationerror.cpp  communicationerror.h  communicationmanager.cpp  communicationmanager.h
debian/: README.source  changelog  control  copyright  gbp.conf  javabuild  nixnote2.dirs  nixnote2.docs  nixnote2.examples  nixnote2.install  nixnote2.manpages  rules  watch
debian/patches/: 0001-README.txt-patch-for-documentation-description.patch  0001-force-using-qt5qevercloud-3.x-library-from-system.patch  0002-Add-the-ability-to-alter-the-default-notebook.patch  0002-Correct-command-line-import-having-extra-after-the-h.patch  0002-dialog-screencapture-update-incorrect-FSF-address.patch  0002-remove-purple-theme-due-to-uncertain-file-license.patch  series  (+6 more)
development/: README.md  build-dependencies-ubuntu-2004.sh  build-spellplugin.sh  build-with-docker-562.sh  build-with-docker-qt5x-webkit.sh  build-with-docker-xenial.sh  build-with-docker.sh  build-with-qmake.sh  copy-to-import-folder.sh  create-AppImage-linuxdeploy.sh  create-AppImage.sh  create-build-version.sh  deb-pkg-clean.sh  deb-pkg-run-dh-seqs.sh  deb-pkg-run-recipe.sh  default-build.sh  deploy-on-windows.sh  rs-build.sh  rs-local-qmake-5-5.sh  run-tests.sh
dialog/: aboutdialog.cpp  accountdialog.cpp  accountmaintenancedialog.cpp  closenotebookdialog.cpp  databasestatus.cpp  htmlentitiesdialog.cpp  logindialog.cpp  logviewer.cpp  notebookproperties.cpp  notehistoryselect.h  savedsearchproperties.cpp  screencapture.cpp  screencapture.h  shortcutdialog.cpp  spellcheckdialog.cpp  tabledialog.cpp  tagproperties.cpp  watchfolderadd.cpp  watchfolderdialog.cpp
docs/: CHANGELOG.md  DOCKER-README.md  TODO.md  license.html  nixnote21.1  shortcuts-howto.md  technical-notes.md
docs/legacy/: README.md
email/: smtpclient.cpp
exits/: exitmanager.cpp  exitpoint.cpp
filters/: filterengine.cpp  lenseresults.h  notesortfilterproxymodel.cpp  remotequery.cpp
gui/: datedelegate.cpp  externalbrowse.cpp  externalbrowse.h  favoritesview.cpp  favoritesviewdelegate.cpp  flowlayout.cpp  lineedit.cpp  nattributetree.cpp  nbrowserwindow.cpp  nbrowserwindow.h  nmainmenubar.cpp  nmainmenubar.h  nnotebookview.cpp  nnotebookviewdelegate.cpp  nsearchview.cpp  ntableview.cpp  ntableview.h  ntableviewheader.cpp  ntabwidget.cpp  ntabwidget.h  ntagview.cpp  ntrashtree.cpp  nwebview.cpp  nwebview.h  shortcutkeys.cpp  traymenu.cpp  truefalsedelegate.cpp
help/: about.html
html/: enmlformatter.cpp  enmlformatter.h  noteformatter.cpp
images/: theme.ini
logger/: qslog.cpp  qslog.h
models/: notemodel.cpp  notemodel.h
packaging/: README.md  launchpad-recipe-nixnote21
settings/: accountsmanager.cpp  colorsettings.cpp  filemanager.cpp  filemanager.h  startupconfig.cpp  startupconfig.h
sql/: databaseconnection.cpp  filewatchertable.h  notetable.cpp  resourcetable.cpp  tagtable.cpp
src/: global.cpp  global.h  main.cpp  nixnote.cpp  nixnote.h
src/qevercloud/: !README-nixnote2.md  .travis.yml  API_breaks_3_to_4.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  appveyor.yml
src/qevercloud/QEverCloud/: CMakeLists.txt  QEverCloud.pro
src/qevercloud/QEverCloud/cmake/modules/: QEverCloudCMakePolicies.cmake  QEverCloudCompilerSettings.cmake  QEverCloudConfig.cmake.in  QEverCloudFindQt5DependenciesTranslations.cmake  QEverCloudSetupQt.cmake  QEverCloudUpdateTranslations.cmake
src/qevercloud/QEverCloud/headers/: AsyncResult.h  DurableService.h  EventLoopFinisher.h  EverCloudException.h  Exceptions.h  Export.h  Globals.h  Helpers.h  InkNoteImageDownloader.h  Log.h  OAuth.h  Optional.h  Printable.h  QEverCloud.h  QEverCloudOAuth.h  RequestContext.h  Thumbnail.h  VersionInfo.h.in  exceptions.h  export.h  oauth.h  qt4helpers.h  thumbnail.h
src/qevercloud/QEverCloud/src/: AsyncResult.cpp  AsyncResult_p.cpp  AsyncResult_p.h  DurableService.cpp  EventLoopFinisher.cpp  EverCloudException.cpp  Exceptions.cpp  Globals.cpp  Http.cpp  Http.h  HttpRequestData.h  HttpRequestParser.cpp  HttpRequestParser.h  HttpUtils.cpp  HttpUtils.h  Impl.h  InkNoteImageDownloader.cpp  Log.cpp  NetworkCookieJar.cpp  NetworkCookieJar.h  Printable.cpp  RequestContext.cpp  Thrift.h  Thumbnail.cpp  VersionInfo.cpp  exceptions.cpp  globals.cpp  http.cpp  http.h  oauth.cpp  services_nongenerated.cpp  thrift.h  thumbnail.cpp
src/qevercloud/QEverCloud/src/oauth/: AbstractOAuthEngine.cpp  AbstractOAuthEngine.h  NetworkCookieJar.cpp  NetworkCookieJar.h  NonceGenerator.cpp  NonceGenerator.h  OAuth.cpp  OAuthSystemBrowser.cpp  OAuthSystemBrowser.h  OAuthWebEngine.cpp  OAuthWebEngine.h  OAuthWebKit.cpp  OAuthWebKit.h  Utils.cpp  Utils.h
src/qevercloud/QEverCloud/src/tests/: MessageHandler.cpp  MessageHandler.h  TestDurableService.cpp  TestDurableService.h  TestOptional.cpp  TestOptional.h  TestQEverCloud.cpp
src/qevercloud/QEverCloud/translations/: QEverCloud_ru_RU.ts
testsrc/: run.sh  tests.cpp  tests.h  tests.pro
threads/: syncrunner.cpp
translations/: nixnote21_en_GB.ts  nixnote21_sk.ts  nixnote2_ca.ts  nixnote2_cs_CZ.ts  nixnote2_da.ts  nixnote2_de.ts  nixnote2_en_GB.ts  nixnote2_es.ts  nixnote2_fr.ts  nixnote2_it.ts  nixnote2_ja.ts  nixnote2_pl.ts  nixnote2_pt.ts  nixnote2_ru.ts  nixnote2_sk.ts  nixnote2_zh_CN.ts  nixnote2_zh_TW.ts
utilities/: crossmemorymapper.cpp  crossmemorymapper.h  debugtool.cpp  encrypt.cpp  noteindexer.cpp  spellchecker.cpp  spellchecker.h
watcher/: filewatcher.cpp
xml/: batchimport.cpp  exportdata.cpp
(+209 files in other folders)
